--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -18,3 +18,22 @@ img{
 .post-list:hover{
     background-color: whitesmoke;
 }
+
+
+.tags{
+    display: flex;
+    flex-direction: column;
+}
+
+.tags a{
+    margin-bottom: 2rem;
+    list-style: none;
+        background-color: #ececec;
+    border: 1px solid #ffff;
+    border: 1px solid #ffff;
+    width: 80%;
+    padding: 1rem;
+    text-decoration: none;
+    font-size: 1.1rem;
+    color: rgb(31, 26, 26);
+}
