--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -1,3 +1,9 @@
+html {
+    background-color: #ffffff;
+}
+.hero {
+    background-color: #26132f;
+}
 .link{
 
     text-decoration: none;
@@ -12,7 +18,7 @@
 }
 
 img{
-  height: 90% !important;
+  height: 75% !important;
 }
 
 .post-list:hover{
