--- a/src/components/share.css
+++ b/src/components/share.css
@@ -1,4 +1,6 @@
 .social{
+    padding-top: 20px;
+    padding-bottom: 30px;
     display: flex;
       justify-content: center;
     list-style: none;
