--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -5,12 +5,25 @@ html {
 .has-bg-img { 
   /*  background-image: url('https://i.imgur.com/0sqhJvp.jpg'); */
     background-repeat: no-repeat;
-
    
 }
 
-.link{
+.hero-body{
+    margin-bottom: 50px;
+}
 
+.media {
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.line {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.link{
     text-decoration: none;
     color: black;
 }
@@ -33,6 +46,7 @@ img{
 
 
 .tags{
+    padding-top: 5%;
     display: flex;
     flex-direction: column;
 }
@@ -48,4 +62,10 @@ img{
     text-decoration: none;
     font-size: 1.1rem;
     color: rgb(31, 26, 26);
+}
+
+.contact{
+    padding-top: 5%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
