--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #ffffff;
+    background-color: #ffffff;    
 }
 
 .has-bg-img { 
@@ -68,4 +68,9 @@ img{
     padding-top: 5%;
     padding-left: 20%;
     padding-right: 20%;
+}
+
+.fa-arrow-alt-circle-down{
+    margin-top: 100px;
+    margin-left: 50%;
 }
