--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -19,6 +19,15 @@ html {
     background-color: #442555;
 } 
 
+.contact-hero {
+    background-image: url('https://i.imgur.com/IHAjgFj.png'); 
+    height: 900px;
+    background-repeat: no-repeat;
+    background-position: top; 
+    background-color: #442555;
+} 
+
+
 .has-bg-img { 
     margin-top: -75px;
     background-image: url('https://i.imgur.com/X0Uy9Uc.png'); 
@@ -27,7 +36,6 @@ html {
     background-color: #442555;
 
 }
-
 
 .media {
     margin-top: 20px;
@@ -47,8 +55,6 @@ html {
 
 .is-2 {
     padding-top: 20px;
-
-
 }
 
 .post-list {
@@ -82,13 +88,14 @@ html {
     color: #ffffff;
 }
 
-.contact{
+.prev-next{
     padding-top: 20px;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-bottom: 100px;
 }
 
-.fa-arrow-alt-circle-down{
-    margin-top: 100px;
-    margin-left: 50%;
+.contact{
+    padding-top: 5%;
+    padding-left: 60%;
+    padding-right: 10%;
 }
+
