--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -12,25 +12,33 @@ html {
 }
 
 .about-hero {
-    margin-top: -100px;
-    background-image: url('https://i.imgur.com/jBttun9.png'); 
     background-repeat: no-repeat;
-    background-position: top-center; 
+    background-position: top-left; 
+    background-size: contain;
     background-color: #442555;
 } 
 
 .contact-hero {
-    background-image: url('https://i.imgur.com/IHAjgFj.png'); 
-    height: 900px;
     background-repeat: no-repeat;
-    background-position: top; 
+    background-size: contain;
+    background-position: top-left; 
+    background-color: #442555;
+    padding-bottom: 20px;
+} 
+
+.episodes-hero {
+    background-image: url('https://i.imgur.com/ouACxIW.png'); 
+    background-size: contain;
+    padding-top: 40px;
+    background-repeat: no-repeat;
+    background-position: top-left;
     background-color: #442555;
 } 
 
 
 .has-bg-img { 
-    margin-top: -75px;
     background-image: url('https://i.imgur.com/X0Uy9Uc.png'); 
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center; 
     background-color: #442555;
@@ -58,10 +66,10 @@ html {
 }
 
 .post-list {
-    border: 1px solid  gainsboro;
+    border: 1px solid #442754;
     padding: .5rem;
-    box-shadow: 0 -1px 4px #ede7e7;
     margin: 1rem;
+    background-color: white;
 }
 
 .post-list:hover{
@@ -95,7 +103,7 @@ html {
 
 .contact{
     padding-top: 5%;
-    padding-left: 60%;
+    padding-left: 10%;
     padding-right: 10%;
 }
 
