--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -13,7 +13,6 @@ html {
 
 .about-hero {
     background-repeat: no-repeat;
-    background-position: top-left; 
     background-size: contain;
     background-color: #442555;
 } 
@@ -27,18 +26,15 @@ html {
 } 
 
 .episodes-hero {
-    background-image: url('https://i.imgur.com/ouACxIW.png'); 
     background-size: contain;
-    padding-top: 40px;
-    background-repeat: no-repeat;
-    background-position: top-left;
-    background-color: #442555;
+    background-color: #442555
 } 
 
 
 .has-bg-img { 
     background-image: url('https://i.imgur.com/X0Uy9Uc.png'); 
     background-size: contain;
+    height: 575px;
     background-repeat: no-repeat;
     background-position: center; 
     background-color: #442555;
@@ -63,6 +59,10 @@ html {
 
 .is-2 {
     padding-top: 20px;
+}
+
+.is-4 {
+    color: white;
 }
 
 .post-list {
