updated theme - add latest episode to index

--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -8,13 +8,22 @@ html {
 }
 
 .is-light{
-    color: white;
+    color: white!important;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 110%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
 }
 
 .about-hero {
+    background-image: url('https://i.imgur.com/hJE79E6.jpg'); 
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-color: #442555;
+    background-color: #000000;
 } 
 
 .contact-hero {
@@ -38,6 +47,7 @@ html {
     background-repeat: no-repeat;
     background-position: center; 
     background-color: #442555;
+    padding-bottom: 20px;
 
 }
 
@@ -63,6 +73,10 @@ html {
 
 .is-4 {
     color: #442754;
+}
+
+.is-5 {
+    color: #ffffff!important;
 }
 
 .post-list {
