--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,11 +10,11 @@
     padding: 5px;
 }
 
-.fa-home {
+.fa-headphones {
     margin-right: 2px;
 }
 
-.fa-search {
+.fa-level-down-alt{
     margin-right: 2px;
 }
 
