--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -64,6 +64,11 @@ html {
     color: black;
 }
 
+.is-latest {
+    margin-top: -20px;
+    text-align: center;
+}
+
 .is-2 {
     padding-top: 20px;
 }
