hubspot form integration

--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -37,10 +37,9 @@
     background-color: #442555!important;
 }
 
-.video-container {
+.form-container {
     padding: 18px!important;
     position: relative!important;
-    overflow:hidden!important;
 }
 
 .about-hero {
