--- a/src/pages/post.css
+++ b/src/pages/post.css
@@ -1,13 +1,13 @@
 
 .container {
-    padding-right: 10%!important;
-    padding-left: 10%!important;
+    padding-right: 1%!important;
+    padding-left: 1%!important;
     width: 100%!important;
     overflow: hidden!important;
 }
 
 .section {
-    padding:35px!important;
+    padding:20px!important;
 }
 
 .is-right {
@@ -19,6 +19,10 @@
     background-color: transparent!important;
     color: white!important;
 
+}
+
+.column{
+    padding-right:20px;
 }
 
 .is-light{
@@ -93,17 +97,16 @@
 }
 
 .link{
-    text-decoration: none;
+    text-decoration: none!important;
     color: #442754!important;
 }
 
 .is-latest {
-    text-align: center;
+   
     color: #442754!important;
     font-size: 38px!important;
     font-weight: 300!important;
     margin-top: 0px!important;
-    padding-bottom:10px!important;
 }
 
 .is-3 {
@@ -136,6 +139,13 @@ a link {
     margin: 1rem;
     background-color: white;
     
+}
+.navbar-dropdown {
+    background-color: #442754!important;
+}
+
+.navbar-link{
+    color: #f1ba4c!important;
 }
 
 .navbar-burger{
